# bazel-repo

./: .gitignore  MODULE.bazel  mise.toml
nicknamer/: BUILD.bazel  compose.yaml  run_locally.sh
nicknamer/migration/lib/: BUILD.bazel
nicknamer/migration/lib/src/: m20220101_000001_create_user_table.rs  m20250618_072946_rename_table_name.rs  m20250622_231317_add_index.rs  m20250706_102217_add_name_by_server.rs  m20250715_180325_update_unique_column.rs
nicknamer/server/: BUILD.bazel
nicknamer/server/src/: main.rs
